--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="about.html">About</a></li>
-            <li><a href="work.html">Work</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#projects">Projects</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
@@ -54,13 +54,13 @@
 
 	<!-- +++++ Welcome Section +++++ -->
 	<div id="ww">
-	    <div class="container">
+	    <div class="container"> <a id = "about" class = "scroll anchor"></a>
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2 centered">
-					<img src="assets/img/user.png" alt="Stanley">
-					<h1>Hi, I am Dhruv!</h1>
-					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede. </p>
-					<p>Morbi in sem quis dui placerat ornare. Pellentesque odio nisi, euismod in, pharetra a, ultricies in, diam. Sed arcu. Cras consequat.</p>
+					<img src="assets/img/user.png" alt="Dhruv Agarwal">
+					<h1>About Dhruv!</h1>
+					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.</p>
+					<p>Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci. Aenean dignissim pellentesque felis.</p>
 				
 				</div><!-- /col-lg-8 -->
 			</div><!-- /row -->
@@ -68,9 +68,83 @@
 	</div><!-- /ww -->
 	
 	
-	<!-- +++++ Projects Section +++++ -->
+	<!-- +++++ Information Section +++++ -->
 	
 	<div class="container pt">
+		<div class="row mt centered">	
+			<div class="col-lg-3">
+				<span class="glyphicon glyphicon-book"></span>
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+			</div>
+			
+			<div class="col-lg-3">
+				<span class="glyphicon glyphicon-user"></span>
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+			</div>
+
+			<div class="col-lg-3">
+				<span class="glyphicon glyphicon-fire"></span>
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+			</div>
+
+			<div class="col-lg-3">
+				<span class="glyphicon glyphicon-globe"></span>
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+			</div>
+		</div><!-- /row -->
+		
+		<div class="row mt">
+			<div class="col-lg-6">
+				<h4>THE THINKING</h4>
+				<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.</p>
+			</div><!-- /colg-lg-6 -->
+			
+			<div class="col-lg-6">
+				<h4>MY SKILLS</h4>
+				Java
+				<div class="progress">
+					<div class="progress-bar progress-bar-theme" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+						<span class="sr-only">60% Complete</span>
+					</div>
+				</div>
+
+				Photoshop
+				<div class="progress">
+					<div class="progress-bar progress-bar-theme" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 65%;">
+						<span class="sr-only">65% Complete</span>
+					</div>
+				</div>
+				
+				Python
+				<div class="progress">
+					<div class="progress-bar progress-bar-theme" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 30%;">
+						<span class="sr-only">30% Complete</span>
+					</div>
+				</div>
+
+				HTML + CSS
+				<div class="progress">
+					<div class="progress-bar progress-bar-theme" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%;">
+						<span class="sr-only">90% Complete</span>
+					</div>
+				</div>
+
+			</div><!-- /col-lg-6 -->
+		</div><!-- /row -->
+	</div><!-- /container -->
+	
+	
+	
+	<!-- +++++ Projects Section +++++ -->
+	<div id="ww">
+	    <div class="container"> <a id = "projects" class = "scroll anchor"></a>
+			<div class="row mt">
+			<div class="col-lg-6 col-lg-offset-3 centered">
+				<h3>MY WORK</h3>
+				<hr>
+				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.</p>
+			</div>
+		</div>
 		<div class="row mt centered">	
 			<div class="col-lg-4">
 				<a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/port01.jpg" alt="" /></a>
@@ -99,7 +173,8 @@
 				<p>CHIEFS</p>
 			</div>
 		</div><!-- /row -->
-	</div><!-- /container -->
+	    </div> <!-- /container -->
+	</div><!-- /ww -->
 	
 	
 	<!-- +++++ Footer Section +++++ -->
