--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="assets/js/hover.zoom.js"></script>
     <script src="assets/js/hover.zoom.conf.js"></script>
+    <script src = "assets/js/smooth-scroll.js"></script>
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -43,10 +44,10 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#about">About</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="blog.html">Blog</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a data-scroll href="#about">About</a></li>
+            <li><a data-scroll href="#projects">Projects</a></li>
+            <li><a data-scroll href="blog.html">Blog</a></li>
+            <li><a data-scroll href="#contact">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -175,8 +176,39 @@
 		</div><!-- /row -->
 	    </div> <!-- /container -->
 	</div><!-- /ww -->
-	
-	
+		
+	<!-- +++++ Contact Section +++++ -->
+	<div class="container pt"><a id = "contact" class = "scroll anchor"></a>
+		<div class="row mt">
+			<div class="col-lg-6 col-lg-offset-3 centered">
+				<h3>CONTACT ME</h3>
+				<hr>
+				<p>Stuck on Something? Can I Help? Fill out this form and I will get back to you.</p>
+			</div>
+		</div>
+		<div class="row mt">	
+			<div class="col-lg-8 col-lg-offset-2">
+				<form role="form">
+				  <div class="form-group">
+				    <input type="name" class="form-control" id="NameInputEmail1" placeholder="Your Name">
+				    <br>
+				  </div>
+				  <div class="form-group">
+				    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+				    <br>
+				  </div>
+				  <div class="form-group">
+				    <input type="name" class="form-control" id="subjectEmail1" placeholder="Subject">
+				    <br>
+				  </div>
+				  <textarea class="form-control" rows="6" placeholder="Enter your text here"></textarea>
+				    <br>
+				  <button type="submit" class="btn btn-success">SUBMIT</button>
+				</form>    			
+			</div>
+		</div><!-- /row -->
+	</div><!-- /container -->
+
 	<!-- +++++ Footer Section +++++ -->
 	
 	<div id="footer">
@@ -196,7 +228,7 @@
 					<p>
 						<a href="http://www.facebook.com/dhruv1996">Facebook</a><br/>
 						<a href="http://www.twitter.com/TheDhruvAgarwal">Twitter</a><br/>
-						<a href="http://www.github.com/dhruvag">Github</a>
+						<a href="http://www.github.com/dhruvag">Github</a><br/>
 						<a href="http://www.linkedin.com/in/dhruvag">LinkedIn</a>
 					</p>
 				</div><!-- /col-lg-4 -->
@@ -217,4 +249,10 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="assets/js/bootstrap.min.js"></script>
   </body>
+  <script>
+	smoothScroll.init({
+		speed: 1,
+		easing: 'easeInOutQuart'
+	});
+	</script>
 </html>
