--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="../../docs-assets/ico/favicon.png">
 
-    <title>STANLEY - Free Bootstrap Theme </title>
+    <title>DHRUV AGARWAL</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -18,6 +18,9 @@
     <link href="assets/css/main.css" rel="stylesheet">
 
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="assets/js/hover.zoom.js"></script>
+    <script src="assets/js/hover.zoom.conf.js"></script>
+    <script src = "assets/js/smooth-scroll.js"></script>
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -37,14 +40,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">STANLEY</a>
+          <a class="navbar-brand" href="index.html">DHRUV AGARWAL</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="work.html">Work</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="blog.html">Blog</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a data-scroll href="index.html#about">About</a></li>
+            <li><a data-scroll href="index.html#projects">Projects</a></li>
+            <li><a data-scroll href="blog.html">Blog</a></li>
+            <li><a data-scroll href="index.html#contact">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -110,24 +113,25 @@
 				<div class="col-lg-4">
 					<h4>My Bunker</h4>
 					<p>
-						Some Address 987,<br/>
-						+34 9054 5455, <br/>
-						Madrid, Spain.
+						English House, University of Pennsylvania<br/>
+						3465 Sansom Street,<br/>
+						Philadelphia, PA
 					</p>
 				</div><!-- /col-lg-4 -->
 				
 				<div class="col-lg-4">
 					<h4>My Links</h4>
 					<p>
-						<a href="#">Dribbble</a><br/>
-						<a href="#">Twitter</a><br/>
-						<a href="#">Facebook</a>
+						<a href="http://www.facebook.com/dhruv1996">Facebook</a><br/>
+						<a href="http://www.twitter.com/TheDhruvAgarwal">Twitter</a><br/>
+						<a href="http://www.github.com/dhruvag">Github</a><br/>
+						<a href="http://www.linkedin.com/in/dhruvag">LinkedIn</a>
 					</p>
 				</div><!-- /col-lg-4 -->
 				
 				<div class="col-lg-4">
-					<h4>About Stanley</h4>
-					<p>This cute theme was created to showcase your work in a simple way. Use it wisely.</p>
+					<h4>About Dhruv</h4>
+					<p>I am an overall geek, interested in everything design and code. Give me a shout out when you need to get things done!</p>
 				</div><!-- /col-lg-4 -->
 			
 			</div>
@@ -141,4 +145,11 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="assets/js/bootstrap.min.js"></script>
   </body>
+  <script>
+	smoothScroll.init({
+		speed: 1,
+		easing: 'easeInOutQuart'
+	});
+	</script>
 </html>
+
