--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
 		</div>
 		<div class="row mt centered">	
 			<div class="col-lg-4">
-				<a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/port01.jpg" alt="" /></a>
-				<p>APE</p>
+				<a class="zoom green" href="voicebox.html"><img class="img-responsive" src="assets/img/portfolio/voicebox.png" alt="VoiceBox" /></a>
+				<p>VOICEBOX</p>
 			</div>
 			<div class="col-lg-4">
 				<a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/port02.jpg" alt="" /></a>
