--- a/voicebox.html
+++ b/voicebox.html
@@ -65,9 +65,9 @@
 				<p>A Chrome extension that puts the reigns of email into the hands of the user by making their Gmail inbox completely voice-activated. Using natural language processing to perform voice recognition, we implemented all of the typically used Gmail commands responsive to verbal cues in order to make checking emails much less of a chore. Using just verbal cues, you can navigate through labels, search for emails, and have Gmail read out a preview of your new emails, among other things. This is ideal for users who aim to use their time efficiently managing emails on-the-go. </p>
 			</div>
 		</div>
-			
+		<div class="row mt centered">	
 			<iframe width="870" height="612" src="//www.youtube.com/embed/tLIYy2XFQPs" frameborder="0" allowfullscreen></iframe>
-		
+		</div><!-- /row -->
 	</div><!-- /container -->
 	
 	
