--- a/voicebox.html
+++ b/voicebox.html
@@ -60,8 +60,9 @@
 	<div class="container pt">
 		<div class="row mt">
 			<div class="col-lg-6 col-lg-offset-3 centered">
-				<h3>VoiceBox</h3>
+				<h2>VoiceBox</h2>
 				<hr>
+				<h4> <a href ="https://www.youtube.com/watch?v=tfj4J_z6Wto"> Top 20 HackPrinceton Fall 2014</a> | <a href="http://www.github.com/dhruvag/voicebox"> Github </a> | <a href="http://challengepost.com/software/voicebox"> Challengepost </a>  </h4>
 				<p>A Chrome extension that puts the reigns of email into the hands of the user by making their Gmail inbox completely voice-activated. Using natural language processing to perform voice recognition, we implemented all of the typically used Gmail commands responsive to verbal cues in order to make checking emails much less of a chore. Using just verbal cues, you can navigate through labels, search for emails, and have Gmail read out a preview of your new emails, among other things. This is ideal for users who aim to use their time efficiently managing emails on-the-go. </p>
 			</div>
 		</div>
