--- a/index.html
+++ b/index.html
@@ -152,15 +152,15 @@
 				<p>VOICEBOX</p>
 			</div>
 			<div class="col-lg-4">
-				<a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/port02.jpg" alt="" /></a>
-				<p>RAIDERS</p>
+				<a class="zoom green" href="smingle.html"><img class="img-responsive" src="assets/img/portfolio/smingle.png" alt="" /></a>
+				<p>SMINGLE</p>
 			</div>
-			<div class="col-lg-4">
-				<a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/port03.jpg" alt="" /></a>
+			<!-- <div class="col-lg-4">
+				<a class="zoom green" href="smingle.html"><img class="img-responsive" src="assets/img/portfolio/smingle.png" alt="" /></a>
 				<p>VIKINGS</p>
-			</div>
+			</div> -->
 		</div><!-- /row -->
-		<div class="row mt centered">	
+		<!-- <div class="row mt centered">	
 			<div class="col-lg-4">
 				<a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/port04.jpg" alt="" /></a>
 				<p>YODA</p>
@@ -173,7 +173,7 @@
 				<a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/port06.jpg" alt="" /></a>
 				<p>CHIEFS</p>
 			</div>
-		</div><!-- /row -->
+		</div><!-- /row --> 
 	    </div> <!-- /container -->
 	</div><!-- /ww -->
 		
