--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 							<div class="imac-screen flexslider">
 								<ul class="slides">
 									<li>
-										<img src="assets/ILINC.png" alt=""/>
+										<img src="assets/projects/ILINC.png" alt=""/>
 									</li>
 									<li>
 										<img src="assets/slide_3.jpg" alt=""/>
