--- a/index.html
+++ b/index.html
@@ -116,12 +116,14 @@
 									<li>
 										<img src="assets/projects/ILINC.png" alt=""/>
 									</li>
+									
 									<li>
-										<img src="assets/slide_3.jpg" alt=""/>
-									</li>
+										<img src="assets/projects/voicebox.png" alt=""/>
+									</li> <!--
 									<li>
 										<img src="assets/slide_4.jpg" alt=""/>
 									</li>
+								-->
 								</ul>
 							</div>
 						</div>
