--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 		<link rel="stylesheet" href="css/flexslider.css">
 		<link id="main" rel="stylesheet" href="css/meflat-blue.css">
 		<link id="theme" rel="stylesheet" href="css/meflat-blue.css">
+		<link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.1/css/font-awesome.css" rel="stylesheet">
 		
 		
 		<!-- ==============================================
