--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 									</li>
 									
 									<li>
-										<img src="assets/projects/voicebox.png" alt=""/>
+										<img src="assets/projects/voicebox2.jpg" alt=""/>
 									</li> <!--
 									<li>
 										<img src="assets/slide_4.jpg" alt=""/>
