--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
 					=============================================== -->	
 					<article class="project-item chrome-extensions">
 						
-						<img class="img-responsive project-image" src="assets/projects/dribbble_1.jpg"  alt=""><!--Project thumb -->
+						<img class="img-responsive project-image" src="assets/projects/voicebox-web.PNG"  alt=""><!--Project thumb -->
 						
 						<div class="hover-mask">
 							<h2 class="project-title">VoiceBox</h2><!--Project Title -->
@@ -379,7 +379,7 @@
 							data-date="November 2014" 
 							data-client="Top 20 - HackPrinceton Fall 2014"
 							data-descr="A Chrome extension that puts the reigns of email into the hands of the user by making their Gmail inbox completely voice-activated." 
-							data-images=""
+							data-images="assets/projects/voicebox-web.PNG"
 						>
 						<iframe width="750" height="563" src="//www.youtube.com/embed/tLIYy2XFQPs?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
 							<p>Using natural language processing to perform voice recognition, we implemented all of the typically used Gmail commands responsive to verbal cues in order to make checking emails much less of a chore. Using just verbal cues, you can navigate through labels, search for emails, and have Gmail read out a preview of your new emails, among other things. This is ideal for users who aim to use their time efficiently managing emails on-the-go.</p>
