--- a/index.html
+++ b/index.html
@@ -119,12 +119,15 @@
 									</li>
 									
 									<li>
-										<img src="assets/projects/voicebox2.jpg" alt=""/>
-									</li> <!--
+										<img src="assets/projects/youthhack.PNG" alt=""/>
+									</li> 
 									<li>
-										<img src="assets/slide_4.jpg" alt=""/>
+										<img src="assets/projects/voicebox-web.PNG" alt=""/>
 									</li>
-								-->
+									<li>
+										<img src="assets/projects/wufc-website.PNG" alt=""/>
+									</li>
+								
 								</ul>
 							</div>
 						</div>
