--- a/index.html
+++ b/index.html
@@ -113,9 +113,10 @@
 						<div class="imac-frame">
 							<img class="img-responsive img-center" src="assets/imac.png" alt=""/>
 							<div class="imac-screen flexslider">
+								<img class="img-responsive img-center" src="assets/chrome-top.png" alt=""/>
 								<ul class="slides">
 									<li>
-										<img src="assets/projects/ILINC.png" alt=""/>
+										<img src="assets/projects/ilinc.-large.PNG" alt=""/>
 									</li>
 									
 									<li>
