--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 								<img class="img-responsive img-center" src="assets/chrome-top.png" alt=""/>
 								<ul class="slides">
 									<li>
-										<img src="assets/projects/ilinc.-large.PNG" alt=""/>
+										<img src="assets/projects/ilinc-large.PNG" alt=""/>
 									</li>
 									
 									<li>
