--- a/index.html
+++ b/index.html
@@ -117,17 +117,23 @@
 								<img class="img-responsive img-center" src="assets/chrome-top.png" alt=""/>
 								<ul class="slides">
 									<li>
-										<img src="assets/projects/ilinc-large.PNG" alt=""/>
+										<img src="assets/projects/ilinc-large2.PNG" alt=""/>
 									</li>
 									
 									<li>
-										<img src="assets/projects/youthhack.PNG" alt=""/>
+										<img src="assets/projects/youthhack-large.png" alt=""/>
 									</li> 
 									<li>
-										<img src="assets/projects/voicebox-web.PNG" alt=""/>
+										<img src="assets/projects/voicebox-web-large.PNG" alt=""/>
 									</li>
 									<li>
-										<img src="assets/projects/wufc-website.PNG" alt=""/>
+										<img src="assets/projects/wufc-website-large.png" alt=""/>
+									</li>
+									<li>
+										<img src="assets/projects/istock-large.png" alt=""/>
+									</li>
+									<li>
+										<img src="assets/projects/smingle-large.png" alt=""/>
 									</li>
 								
 								</ul>
