--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 								<img class="img-responsive img-center" src="assets/chrome-top.png" alt=""/>
 								<ul class="slides">
 									<li>
-										<img src="assets/projects/ilinc-large2.PNG" alt=""/>
+										<img src="assets/projects/ilinc-large2.png" alt=""/>
 									</li>
 									
 									<li>
