--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@
 						<textarea id="contact-message" name="comments" rows="1" class="label_better requiredField" data-new-placeholder="Message" placeholder="Message" data-error-empty="*Enter your message"></textarea>
 					</span>
 					
-					<p class="text-center"><button  name="submit" type="submit" class="btn btn-meflat icon-left" data-error-message="Error!" data-sending-message="Sending..." data-ok-message="Message Sent"><i class="fa fa-paper-plane"></i>Send Message</button></p>
+					<p class="text-center"><a href="mailto:dhruvag@seas.upenn.edu"><button  name="submit" type="submit" class="btn btn-meflat icon-left" data-error-message="Error!" data-sending-message="Sending..." data-ok-message="Message Sent"><i class="fa fa-envelope fa-fw"></i>Send Message</button></a></p>
 					<input type="hidden" name="submitted" id="submitted" value="true" />
 					
 				</form>
